syntax = "proto3";
package model;

import "google/protobuf/timestamp.proto";

message AuthnRequest {
    string ID = 1;
    string Version = 2;
    google.protobuf.Timestamp IssueInstant = 3;
    string Issuer = 4;
    string Destination = 5;
    string AssertionConsumerServiceURL = 6;
    string ProtocolBinding = 7;
    string AttributeConsumingServiceIndex = 8;
    string RelayState = 9;
}

message Attribute {
    string name = 1;
    repeated string value = 2;
}
  
message User {
    string name = 1;
    repeated Attribute attribute = 4;
}